--- a/veebilehtmarit.css
+++ b/veebilehtmarit.css
@@ -11,7 +11,7 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	position: relative;
-	font-family: Gill Sans MT;
+	font-family: 'Rubik', sans-serif;
 }
 
 header {
