--- a/veebilehtmarit.css
+++ b/veebilehtmarit.css
@@ -139,7 +139,7 @@ form.otsing input[type=text] {
 	background-color: #D8C8B9;
 	border: 0.2vw #401424;
 	border-style: solid;
-	border-radius: 25px;
+	border-radius: 2.5vw;
   	width: 15vw;
   	height: 4.5vw; 
 	padding: 0.2vw 0.5vw;
@@ -178,7 +178,7 @@ form.otsing input[type=text] {
 .toit img {
 	height: 100%;
 	width: 23vw;
-	border-radius: 25px;
+	border-radius: 2.5vw;
 }
 
 .info {
@@ -188,7 +188,7 @@ form.otsing input[type=text] {
 }
 
 .info p {
-	border-radius: 25px;
+	border-radius: 2.5vw;
 	height: 23vw;
 	width: 23vw;
 	background-color: #D88371;
