--- a/veebilehtmarit.css
+++ b/veebilehtmarit.css
@@ -63,10 +63,15 @@ form.otsing input[type=text] {
 	color: #401424;
 }
 
+placeholder {
+	color: #401424;
+}
+
 .nav {
 	position: absolute;
 	bottom: 0;
 	left: 15vw;
+	display: table;
 }
 
 .dropbtn, .dropbtn1, .dropbtn2, .dropbtn3, .dropbtn4 {
@@ -78,6 +83,7 @@ form.otsing input[type=text] {
 	border: none;
 	display: block;
 	width: 100%;
+	cursor: pointer;
 }
 
 .dropbtn1, .dropbtn2, .dropbtn3, .dropbtn4 {
