--- a/veebilehttelefon.css
+++ b/veebilehttelefon.css
@@ -37,15 +37,6 @@ img {
 	top: 1%;
 }
 
-.vasak p {
-	position: relative;
-	font-size: 2vw;
-	color: #401424;
-	text-align: right;
-	top: 0.2vw;
-	right: 0;
-}
-
 form.otsing {
 	position: relative;
 	top: 0.5vw;
@@ -58,6 +49,16 @@ form.otsing input[type=text] {
 	font-size: 2vw;
 	color: #401424;
 	padding: 0.5vw 0.5vw;
+}
+	
+.vasak p {
+	position: relative;
+	font-size: 2vw;
+	color: #401424;
+	text-align: right;
+	top: 0.2vw;
+	right: 0;
+	line-height: 1.5;
 }
 
 .nav {
@@ -139,7 +140,7 @@ form.otsing input[type=text] {
 	background-color: #D8C8B9;
 	border: 0.2vw #401424;
 	border-style: solid;
-	border-radius: 25px;
+	border-radius: 2.5vw;
   	width: 40vw;
   	height: 15vw; 
 	padding: 2vw 2vw;
@@ -158,7 +159,7 @@ form.otsing input[type=text] {
 	color: #D8C8B9;
 	font-size: 5vw;
 	text-align: center;
-	width: 40vw;
+	width: 45vw;
   	height: 15vw;
 	padding: 2vw 2vw;
 }
@@ -178,7 +179,7 @@ form.otsing input[type=text] {
 .toit img {
 	height: 100%;
 	width: 50vw;
-	border-radius: 25px;
+	border-radius: 2.5vw;
 }
 
 .info {
@@ -189,7 +190,7 @@ form.otsing input[type=text] {
 }
 
 .info p {
-	border-radius: 25px;
+	border-radius: 2.5vw;
 	height: 50vw;
 	width: 50vw;
 	background-color: #D88371;
